--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
     <style>
         @media screen and (max-width: 800px) {
             #pinkboard {
-
-                position: relative;
-
-                margin: 0 !important;
-
+                top: -150px !important;
+                position: absolute !important;
+                left: 13px !important;
+                /* margin: auto; */
                 height: 350px !important;
-
                 width: 350px !important;
-
-                animation: animate 1.3s infinite;
             }
 
             .title {
@@ -183,15 +179,15 @@
 
             particles: {
 
-                length: 2000, // maximum amount of particles
+                length: 1200, // maximum amount of particles
 
-                duration: 2, // particle duration in sec
+                duration: 3, // particle duration in sec
 
-                velocity: 100, // particle velocity in pixels/sec
+                velocity: 40, // particle velocity in pixels/sec
 
-                effect: -1.3, // play with this for a nice effect
+                effect: -1.6, // play with this for a nice effect
 
-                size: 13, // particle size in pixels
+                size: 14, // particle size in pixels
 
             },
 
