--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <HTML>
 
 <HEAD>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <TITLE> 杜玉凤 </TITLE>
     <META NAME="Author" CONTENT="Wall.D">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
