--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <TITLE> 杜玉凤 </TITLE>
+    <TITLE> <3 </TITLE>
     <META NAME="Author" CONTENT="Wall.D">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="hearts.jpg" />
@@ -624,7 +624,7 @@
 
         margin-bottom: 5px;
 
-        text-align: center;">Đỗ Ngọc Phụng <span>(杜玉凤)</span></div>
+        text-align: center;">### <span>(###)</span></div>
 
 </BODY>
 
